--- a/package.json
+++ b/package.json
@@ -4,22 +4,49 @@
   "main": "index.js",
   "license": "MIT",
   "author": "ngnhat | ngnhatjs@gmail.com",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ngnhat/elastic-like.git"
+  },
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "icu-wordsplit": "^0.3.0",
     "immutable": "^4.0.0-rc.12",
-    "tokenizers": "^0.1.1",
-    "wink-bm25-text-search": "^3.0.1",
-    "wink-nlp-utils": "^2.0.5"
+    "tokenizers": "^0.1.3"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jest": "^22.5.1",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jest": "^22.6.4",
     "jest": "^24.8.0"
-  }
+  },
+  "os": [
+    "linux",
+    "darwin"
+  ],
+  "description": "Full text search library for Browser and Node.js",
+  "engines": {
+    "node": ">=10.0.0"
+  },
+  "bugs": {
+    "url": "https://github.com/ngnhat/elastic-like/issues"
+  },
+  "contributors": [
+    {
+      "name": "ngnhat",
+      "email": "ngnhatjs@gmail.com"
+    }
+  ],
+  "keywords": [
+    "nodejs",
+    "search",
+    "elastic like",
+    "elastic-like",
+    "elasticsearch",
+    "search-engine",
+    "full-text search"
+  ]
 }
