--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "elastic-like",
   "version": "0.1.0",
   "main": "index.js",
@@ -14,7 +15,7 @@
   },
   "dependencies": {
     "immutable": "^4.0.0-rc.12",
-    "tokenizers": "^0.1.7"
+    "tokenizers": "^0.1.8"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
